<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="comicVM"
            type="com.siifii.xkcd_comics.feature.browsecomic.presentation.viewmodel.BrowseComicsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".BrowseComicActivity">

        <SearchView
            android:id="@+id/SVComic"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginEnd="8dp"
            android:queryHint="@string/comic_search_hint"
            android:searchIcon="@drawable/ic_search_24"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/IVComic"
            loadImageUrl="@{comicVM.comicModelLiveData.img}"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toTopOf="@+id/TVTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SVComic"
            tools:srcCompat="@tools:sample/avatars" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FBShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@null"
            android:elevation="0dp"
            android:hapticFeedbackEnabled="true"
            app:fabCustomSize="48dp"
            app:layout_constraintBottom_toTopOf="@+id/FBBookMark"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_share_24" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/FBBookMark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_rounded_dutch_white"
            android:contentDescription="@null"
            android:elevation="0dp"
            android:hapticFeedbackEnabled="true"
            app:fabCustomSize="48dp"
            app:layout_constraintBottom_toTopOf="@+id/EBNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_bookmark_border_24" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/EBNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:onClick="@{comicVM::onNextComicClicked}"
            android:text="@string/comic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/EBPrevious" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/EBPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:onClick="@{comicVM::onPreviousComicClicked}"
            android:text="@string/comic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/EBNext"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/TVTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:elevation="9dp"
            android:text="@{comicVM.comicModelLiveData.title}"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/comic_title_dummy_label" />

        <TextView
            android:id="@+id/TVDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:elevation="9dp"
            android:text="@{comicVM.comicModelLiveData.alt}"
            android:textColor="@color/light_grey"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/TVExplanation"
            app:layout_constraintEnd_toStartOf="@+id/FBBookMark"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/comic_description_dummy_label" />

        <ProgressBar
            android:id="@+id/PBComic"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="start|center"
            android:text="@{@string/comic_details(comicVM.comicModelLiveData.num,comicVM.comicModelLiveData.day, comicVM.comicModelLiveData.month, comicVM.comicModelLiveData.year)}"
            android:textColor="@color/light_grey"
            android:textSize="12sp"
            app:layout_constraintBottom_toTopOf="@+id/TVDescription"
            app:layout_constraintEnd_toStartOf="@+id/FBShare"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/comic_number_dummy_label" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/transparent"
            android:backgroundTint="@color/black"
            android:contentDescription="@string/comic_content_description_add_favourite"
            app:layout_constraintBottom_toBottomOf="@+id/SVComic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/SVComic"
            app:srcCompat="@drawable/ic_favourite_border_32" />

        <TextView
            android:id="@+id/TVExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:drawablePadding="8dp"
            android:text="@string/comic_explanation"
            android:textColor="@color/carmine"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_next_24"
            app:layout_constraintBottom_toTopOf="@+id/EBPrevious"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>